# libuse

./: .appveyor.yml  .cirrus.yml  .clang-format  .config.mk  .gitattributes  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  COPYRIGHT.txt  Cargo.toml  LICENSE.txt  Makefile  README.md  README.org  libstdhl.h  libstdhlc.h  libstdhlcpp.h
.ci/: build.yml  script.sh  test.yml  travis.sh
.cmake/: ECMGenerateHeaders.cmake  FindHayai.cmake  Findlibgtest.cmake  Findlibhayai.cmake  Findlibstdhl.cmake  LibCompile.cmake  LibPackage.cmake  config.mk
.github/: package.Dockerfile
.github/workflows/: build.yml  ccpp.yml  ci.yml  main.workflow  main.yml  nightly.yml
c/: args.c  args.h  default.h  math.h  type.h
cpp/: Allocator.h  Ansi.h  Args.cpp  Args.h  Array.h  Binding.h  Default.h  Enum.h  Exception.h  File.h  FloatingPoint.cpp  FloatingPoint.h  Hash.h  Integer.cpp  Integer.h  Json.h  Labeling.h  Limits.h  List.h  Log.cpp  Log.h  Math.h  Network.h  Random.h  Rational.cpp  Rational.h  Standard.h  String.h  Type.cpp  Type.h  Variadic.h  Xml.h
cpp/file/: TextDocument.cpp  TextDocument.h
cpp/json/: .3rd-party  README.org
cpp/log/: Category.cpp  Category.h  Channel.h  Chronograph.cpp  Chronograph.h  Data.cpp  Data.h  Filter.cpp  Filter.h  Formatter.cpp  Formatter.h  Item.cpp  Item.h  Level.cpp  Level.h  Router.cpp  Router.h  Sink.cpp  Sink.h  Source.cpp  Source.h  Stream.cpp  Stream.h  Switch.cpp  Switch.h  Timestamp.cpp  Timestamp.h
cpp/network/: Interface.cpp  Interface.h  Lsp.h  Packet.cpp  Packet.h  Protocol.h  Socket.h
cpp/standard/: ieee802.h  rfc3986.cpp  rfc3986.h
cpp/type/: Binary.cpp  Binary.h  Boolean.cpp  Boolean.h  Data.cpp  Data.h  Floating.cpp  Floating.h  Integer.cpp  Integer.h  Layout.cpp  Layout.h  Natural.cpp  Natural.h  Rational.cpp  Rational.h  String.cpp  String.h
cpp/xml/: .3rd-party  (+1 more)
etc/: CMakeLists.txt
etc/test/: CMakeLists.txt  main.cpp  main.h
etc/test/cpp/: args.cpp  enum.cpp  environment.cpp  exception.cpp  file.cpp  hash.cpp  json.cpp  list.cpp  log.cpp  logger.cpp  math.cpp  memory.cpp  random.cpp  restoreonscopeexit.cpp  sourcelocation.cpp  stack.cpp  string.cpp  test.cpp  type.cpp  unicode.cpp  variadic.cpp  xml.cpp  yaml.cpp
etc/test/cpp/data/type/: TODO.cpp  data.cpp  integer.cpp  rational.cpp
etc/test/cpp/net/: lsp.cpp
etc/test/cpp/net/lsp/: content.cpp  interface.cpp
etc/test/cpp/network/: lsp.cpp
etc/test/cpp/standard/: rfc3986.cpp
etc/test/cpp/std/: rfc3629.cpp  rfc3986.cpp
etc/test/cpp/type/: TODO.cpp  data.cpp  integer.cpp  rational.cpp
py/: Licenser.py  Verbose.py
python/: Verbose.py
src/: CMakeLists.txt
src/cpp/: Allocator.h  Ansi.cpp  Ansi.h  Args.cpp  Args.h  Array.h  Binding.h  CMakeLists.txt  Enum.h  Environment.cpp  Environment.h  Exception.cpp  Exception.h  File.cpp  File.h  Hash.h  Json.cpp  Json.h  Labeling.h  Limits.h  List.h  Log.h  Math.h  Memory.h  Network.h  Optional.h  Random.h  RestoreOnScopeExit.h  SourceLocation.cpp  SourceLocation.h  Stack.h  Standard.h  String.cpp  String.h  Test.h  Type.h  Unicode.cpp  Unicode.h  Variadic.h  Version.in  (+5 more)
src/cpp/data/file/: TextDocument.cpp  TextDocument.h
src/cpp/data/log/: Category.cpp  Category.h  Channel.h  Chronograph.cpp  Chronograph.h  Data.cpp  Data.h  Filter.cpp  Filter.h  Formatter.cpp  Formatter.h  Item.cpp  Item.h  Level.cpp  Level.h  Logger.cpp  Logger.h  Router.cpp  Router.h  Sink.cpp  Sink.h  Source.cpp  Source.h  Stream.cpp  Stream.h  Switch.cpp  Switch.h  Timestamp.cpp  Timestamp.h
src/cpp/data/type/: Boolean.cpp  Boolean.h  Data.cpp  Data.h  Decimal.cpp  Decimal.h  Integer.cpp  Integer.h  Layout.h  Natural.cpp  Natural.h  Rational.cpp  Rational.h  String.cpp  String.h
src/cpp/file/: File.h  TextDocument.cpp  TextDocument.h
src/cpp/json/: Json.h  README.org
src/cpp/log/: Category.cpp  Category.h  Channel.h  Chronograph.cpp  Chronograph.h  Data.cpp  Data.h  Filter.cpp  Filter.h  Formatter.cpp  Formatter.h  Item.cpp  Item.h  Level.cpp  Level.h  Log.h  Logger.cpp  Logger.h  Router.cpp  Router.h  Sink.cpp  Sink.h  Source.cpp  Source.h  Stream.cpp  Stream.h  Switch.cpp  Switch.h  Timestamp.cpp  Timestamp.h
src/cpp/net/: Interface.cpp  Interface.h  Packet.cpp  Packet.h  Protocol.h  Socket.h
src/cpp/net/dap/: Content.cpp  Content.h  DAP.h  Exception.h  Identifier.h  Interface.cpp  Interface.h  Message.cpp  Message.h  Packet.cpp  Packet.h  Protocol.cpp  Protocol.h
src/cpp/net/eth/: Frame.cpp  Frame.h  Link.cpp  Link.h  Protocol.cpp  Protocol.h  Socket.cpp  Socket.h
src/cpp/net/ethernet/: Frame.h  Link.h  Protocol.cpp  Socket.cpp  Socket.h
src/cpp/net/ip4/: Protocol.h
src/cpp/net/lsp/: Content.cpp  Content.h  Exception.h  Identifier.h  Interface.cpp  Interface.h  LSP.h  Message.cpp  Message.h  Packet.cpp  Packet.h  Protocol.cpp  Protocol.h  Server.cpp  Server.h
src/cpp/net/tcp/: IPv4.cpp  IPv4.h  Packet.h  Protocol.h  Session.h  Socket.cpp  Socket.h
src/cpp/net/udp/: IPv4.cpp  IPv4.h  Packet.h  Protocol.h  Socket.cpp  Socket.h
src/cpp/network/: Interface.cpp  Interface.h  Lsp.h  Network.h  Packet.cpp  Packet.h  Protocol.h  Socket.h
src/cpp/network/ethernet/: Frame.h  Link.cpp  Link.h  Packet.cpp  Packet.h  Protocol.cpp  Protocol.h  Socket.cpp  Socket.h
src/cpp/network/ipv4/: Protocol.h
src/cpp/network/lsp/: Content.cpp  Content.h  Exception.h  Identifier.h  Interface.cpp  Interface.h  LSP.h  Message.cpp  Message.h  Packet.cpp  Packet.h  Protocol.cpp  Protocol.h
src/cpp/network/tcp/: IPv4.cpp  IPv4.h  Packet.h  Protocol.h  Session.h  Socket.cpp  Socket.h
src/cpp/network/udp/: IPv4.cpp  IPv4.h  Packet.h  Protocol.h  Socket.cpp  Socket.h
src/cpp/standard/: Standard.h  ieee802.h  rfc3986.cpp  rfc3986.h
src/cpp/std/: ieee802.h  rfc3629.cpp  rfc3629.h  rfc3986.cpp  rfc3986.h
src/cpp/type/: Boolean.cpp  Boolean.h  Data.cpp  Data.h  Decimal.cpp  Decimal.h  Floating.cpp  Floating.h  Integer.cpp  Integer.h  Layout.h  Natural.cpp  Natural.h  Rational.cpp  Rational.h  String.cpp  String.h  Type.h
src/cpp/xml/: README.org  Xml.h
uts/: example.cpp  libstdhl.cpp  main.cpp  main.h
(+88 files in other folders)
